# scrcpy-obs

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  DECISION.md  KNOWN_ISSUES.md  README.md  buildspec.json
.github/actions/fetch-scrcpy/: action.yaml
.github/scripts/: Package-Windows.ps1
.github/workflows/: build-macos.yaml  build-ubuntu.yaml  build-windows.yaml  dispatch.yaml  e2e-tests.yaml  pr-pull.yaml  push.yaml
cmake/common/: bootstrap.cmake
cmake/windows/: defaults.cmake  helpers.cmake
cmake/windows/resources/: installer-windows.iss.in
data/locale/: en-US.ini
scripts/: test-rawstream.py
src/: plugin-main.c  scrcpy-adb.c  scrcpy-adb.h  scrcpy-process.c  scrcpy-process.h  scrcpy-reader.c  scrcpy-reader.h  scrcpy-source.c  scrcpy-source.h
tests/: README.md  conftest.py  pyproject.toml  run_e2e.py
tests/e2e/: test_multi_device.py  test_obs_grab.py  test_obs_smoke.py
tests/wire/: test_rawstream.py
