[project]
name = "scrcpy-obs-tests"
version = "0.1.0"
description = "Test suite for scrcpy-obs OBS plugin"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0",
    "obsws-python>=1.7",
]

[tool.pytest.ini_options]
testpaths = ["e2e", "wire"]
markers = [
    "e2e: requires OBS running + Android device",
    "wire: requires patched scrcpy binary + Android device",
]
