[project]
name = "scrcpy-obs-tests"
version = "0.1.0"
description = "Test suite for scrcpy-obs OBS plugin"
requires-python = ">=3.14"
dependencies = [
    "pytest>=9.0",
    "obsws-python>=1.8",
]

[tool.pytest.ini_options]
testpaths = ["e2e", "wire"]
markers = [
    "e2e: requires OBS running + Android device",
    "wire: requires patched scrcpy binary + Android device",
]
